set(CMAKE_CXX_STANDARD 17)
add_executable(aoc_6 aoc_6.cpp)
add_executable(aoc_7 day_7.cpp)
add_executable(aoc_8 day_8.cpp)
add_executable(aoc_9 day_9.cpp)
add_executable(aoc_10 day_10.cpp)
add_executable(aoc_11 day_11.cpp)
add_executable(aoc_12 day_12.cpp)
add_executable(aoc_13 day_13.cpp)
add_executable(aoc_14 day_14.cpp)
add_executable(aoc_15 day_15.cpp)
add_executable(aoc_16 day_16.cpp)
add_executable(aoc_17 day_17.cpp)
add_executable(aoc_18 day_18.cpp)
add_executable(aoc_19 day_19.cpp)
add_executable(aoc_21 day_21.cpp)
add_executable(aoc_22 day_22.cpp)
add_executable(aoc_23 day_23.cpp)
target_link_libraries(aoc_23 pthread)

add_executable(aoc_24 day_24.cpp)
add_executable(aoc_25 day_25.cpp)